WIP command line app

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,6 +10,11 @@ updates:
     schedule:
       interval: "weekly"
 
+  - package-ecosystem: "nuget" 
+    directory: "/templates/console/ConsoleApp" 
+    schedule:
+      interval: "weekly"
+
   - package-ecosystem: "github-actions" 
     directory: "/"
     schedule:
