--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,6 +40,7 @@ jobs:
       
   automerge:
     needs: build
+    if: ${{ github.event_name == 'pull_request' }}
     runs-on: ubuntu-latest
 
     permissions:
