--- a/templates/WPF/WpfApp/.editorconfig
+++ b/templates/WPF/WpfApp/.editorconfig
@@ -9,7 +9,7 @@ indent_style = space
 indent_size = 2
 
 # MSBuild files
-[*.csproj,*.targets,*.props]
+[*.{csproj,targets,props}]
 indent_size = 2
 
 # Xml files
