--- a/templates/WPF/WpfApp/Directory.Build.props
+++ b/templates/WPF/WpfApp/Directory.Build.props
@@ -12,6 +12,11 @@ See: https://learn.microsoft.com/visualstudio/msbuild/customize-your-build
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <LangVersion>11</LangVersion>
+    <!-- 
+    If you you like to see source generated files saved to disk you can enable the following:
+    https://learn.microsoft.com/en-us/dotnet/csharp/roslyn-sdk/source-generators-overview
+    -->
+    <!--<EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>-->
   </PropertyGroup>
 
   <!--
