--- a/templates/WPF/WpfApp/WpfApp/WpfApp.csproj
+++ b/templates/WPF/WpfApp/WpfApp/WpfApp.csproj
@@ -11,14 +11,14 @@
   <!--
   Uncomment to enable single file exe publishing
   https://learn.microsoft.com/dotnet/core/deploying/single-file/overview
+  
+  The Condition on PublishSingleFile is to prevent debugging issues while running as a single file.
+  Many debugging tools (Snoop, Visual Studio's UI debugging tools for XAML) will not function with PublishSingleFile set to true.
+  https://github.com/dotnet/runtime/issues/3773
   -->
   <!--
   <PropertyGroup>
     <RuntimeIdentifier>win-x64</RuntimeIdentifier>
-    <!--
-      Many debugging tools (Snoop, Visual Studio's UI debugging tools for XAML) will not function with PublishSingleFile set to true.
-      https://github.com/dotnet/runtime/issues/3773
-    -->
     <PublishSingleFile Condition="'$(Configuration)' != 'Debug'">true</PublishSingleFile>
     <IncludeAllContentForSelfExtract>true</IncludeAllContentForSelfExtract>
     <IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
