--- a/templates/Console/ConsoleApp/NuGet.config
+++ b/templates/Console/ConsoleApp/NuGet.config
@@ -5,11 +5,16 @@
     <clear />
     <!-- `key` can be any identifier for your source. -->
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
+    <add key="daily" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet-libraries/nuget/v3/index.json" />
   </packageSources>
 
   <!-- Define mappings by adding package patterns beneath the target source. -->
   <packageSourceMapping>
     <!-- key value for <packageSource> should match key values from <packageSources> element -->
+    <packageSource key="daily">
+      <package pattern="System.CommandLine" />
+      <package pattern="System.CommandLine.*" />
+    </packageSource>
     <packageSource key="nuget.org">
       <package pattern="*" />
     </packageSource>
