--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,7 +39,6 @@ jobs:
         path: ${{ github.workspace }}\*.nupkg
       
   automerge:
-    needs: build
     if: ${{ github.event_name == 'pull_request' }}
     runs-on: ubuntu-latest
 
@@ -49,6 +48,8 @@ jobs:
 
     steps:
       - uses: fastify/github-action-merge-dependabot@v3.9.0
+        with:
+          use-github-auto-merge: true
 
   push_nugets:
     needs: build
