--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -19,6 +19,10 @@ updates:
     directory: "/templates/Console/ConsoleApp"
     schedule:
       interval: "weekly"
+  - package-ecosystem: "github-actions" 
+    directory: "/templates/Console/ConsoleApp"
+    schedule:
+      interval: "weekly" 
 
   - package-ecosystem: "nuget" 
     directory: "/templates/Library/NuGet"
