--- a/templates/WPF/WpfApp/WpfApp.Tests/WpfApp.Tests.csproj
+++ b/templates/WPF/WpfApp/WpfApp.Tests/WpfApp.Tests.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0-windows</TargetFramework>
+    <AccelerateBuildsInVisualStudio>true</AccelerateBuildsInVisualStudio>
 
     <IsPublishable>false</IsPublishable>
     <IsPackable>false</IsPackable>
