--- a/templates/Console/ConsoleApp/Directory.Build.props
+++ b/templates/Console/ConsoleApp/Directory.Build.props
@@ -12,6 +12,7 @@ See: https://learn.microsoft.com/visualstudio/msbuild/customize-your-build
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <LangVersion>11</LangVersion>
+    <AccelerateBuildsInVisualStudio>true</AccelerateBuildsInVisualStudio>
   </PropertyGroup>
 
   <!--
