Pulling out common stuff

--- a/templates/Avalonia/AvaloniaSolution/Directory.Build.props
+++ b/templates/Avalonia/AvaloniaSolution/Directory.Build.props
@@ -1,6 +1,7 @@
 <Project>
   <PropertyGroup>
     <Nullable>enable</Nullable>
+    <LangVersion>12</LangVersion>
     <AvaloniaVersion>11.0.2</AvaloniaVersion>
   </PropertyGroup>
 </Project>
