Centralized package management

--- a/templates/Avalonia/AvaloniaSolution/SampleAvaloniaApplication.Desktop/SampleAvaloniaApplication.Desktop.csproj
+++ b/templates/Avalonia/AvaloniaSolution/SampleAvaloniaApplication.Desktop/SampleAvaloniaApplication.Desktop.csproj
@@ -11,7 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Avalonia.Desktop" Version="$(AvaloniaVersion)" />
+    <PackageReference Include="Avalonia.Desktop" />
   </ItemGroup>
 
   <ItemGroup>
