--- a/templates/Avalonia/AvaloniaSolution/SampleAvaloniaApplication.Browser/SampleAvaloniaApplication.Browser.csproj
+++ b/templates/Avalonia/AvaloniaSolution/SampleAvaloniaApplication.Browser/SampleAvaloniaApplication.Browser.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Avalonia.Browser" Version="$(AvaloniaVersion)" />
+    <PackageReference Include="Avalonia.Browser" />
   </ItemGroup>
 
   <ItemGroup>
