Adding dotnet new template

--- a/templates/Avalonia/AvaloniaSolution/Directory.Build.props
+++ b/templates/Avalonia/AvaloniaSolution/Directory.Build.props
@@ -1,6 +1,17 @@
 <Project>
   <PropertyGroup>
+    <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <LangVersion>12</LangVersion>
+    <AccelerateBuildsInVisualStudio>true</AccelerateBuildsInVisualStudio>
+  </PropertyGroup>
+
+  <!--
+  This allows all projects to share the same user secrets file.
+  If you want project to have their own, set it to a different GUID on each project.
+  See: https://learn.microsoft.com/dotnet/architecture/microservices/secure-net-microservices-web-applications/developer-app-secrets-storage
+  -->
+  <PropertyGroup Label="User Secrets">
+    <UserSecretsId>12345678-9abc-0123-4567-890abcdef123</UserSecretsId>
   </PropertyGroup>
 </Project>
