Attempt setting direct directory to get dependabot to find the subworkflow files

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -24,7 +24,7 @@ updates:
     schedule:
       interval: "weekly"
   - package-ecosystem: "github-actions" 
-    directory: "/templates/Console/ConsoleApp"
+    directory: "/templates/Console/ConsoleApp/.github/workflows"
     schedule:
       interval: "weekly" 
 
