Updating Avalonia app to use DI
Fixed up the browser target to match the latest Avalonia template.

--- a/templates/Avalonia/AvaloniaSolution/SampleAvaloniaApplication.Browser/SampleAvaloniaApplication.Browser.csproj
+++ b/templates/Avalonia/AvaloniaSolution/SampleAvaloniaApplication.Browser/SampleAvaloniaApplication.Browser.csproj
@@ -1,14 +1,9 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.WebAssembly">
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <RuntimeIdentifier>browser-wasm</RuntimeIdentifier>
-    <WasmMainJSPath>AppBundle\main.js</WasmMainJSPath>
+    <TargetFramework>net8.0-browser</TargetFramework>
     <OutputType>Exe</OutputType>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
-
-  <ItemGroup>
-    <WasmExtraFilesToDeploy Include="AppBundle\**" />
-  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Avalonia.Browser" />
