--- a/templates/Avalonia/AvaloniaSolution/Directory.Packages.props
+++ b/templates/Avalonia/AvaloniaSolution/Directory.Packages.props
@@ -8,16 +8,13 @@
   Uncomment if you need to enable inclusion of another Directory.Packages.props file from a parent directory
   <Import Project="$([MSBuild]::GetPathOfFileAbove(Directory.Packages.props, $(MSBuildThisFileDirectory)..))" />
   -->
-
   <!-- This property enables the Central Package Management feature -->
   <PropertyGroup>
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
     <!-- https://learn.microsoft.com/nuget/consume-packages/Central-Package-Management?WT.mc_id=DT-MVP-5003472#transitive-pinning -->
     <CentralPackageTransitivePinningEnabled>true</CentralPackageTransitivePinningEnabled>
-    
     <AvaloniaVersion>11.1.3</AvaloniaVersion>
   </PropertyGroup>
-
   <!--
   This defines the set of centrally managed packages.
   This would typically list all NuGet packages used within this solution.
@@ -31,9 +28,8 @@
     <PackageVersion Include="Avalonia.Fonts.Inter" Version="$(AvaloniaVersion)" />
     <PackageVersion Include="Avalonia.iOS" Version="$(AvaloniaVersion)" />
     <PackageVersion Include="Avalonia.Themes.Fluent" Version="$(AvaloniaVersion)" />
-
     <PackageVersion Include="CommunityToolkit.Mvvm" Version="8.3.2" />
-
-    <PackageVersion Include="Xamarin.AndroidX.Core.SplashScreen" Version="1.0.1.6" />
+    <PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+    <PackageVersion Include="Xamarin.AndroidX.Core.SplashScreen" Version="1.0.1.12" />
   </ItemGroup>
 </Project>
