--- a/templates/Avalonia/AvaloniaSolution/SampleAvaloniaApplication/SampleAvaloniaApplication.csproj
+++ b/templates/Avalonia/AvaloniaSolution/SampleAvaloniaApplication/SampleAvaloniaApplication.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Avalonia.Themes.Fluent" />
     <PackageReference Include="Avalonia.Fonts.Inter" />
     <PackageReference Include="CommunityToolkit.Mvvm" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
 
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" />
