Also test on windows

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -111,7 +111,7 @@ jobs:
           dotnet pack --configuration Release -o ./NuGet
 
   test-avalonia:
-    runs-on: masos-latest
+    runs-on: windows-latest
     needs: build
 
     steps:
