--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -116,7 +116,8 @@ jobs:
         if: matrix.check-tests == true
         run: |
           Push-Location TestConsoleApp
-          dotnet test
+          dotnet build
+          dotnet test --no-build
           
       - name: Build Only
         if: matrix.check-tests == false && matrix.check-sln == true
