Updates SDK, templates, and test workflows
Upgrades .NET SDK to 9.0.304, enables prerelease SDKs, refines conditional compilation syntax in templates, adjusts test file usings and attributes, configures test project properties for various frameworks, includes global.json in solution files, and adds an aggregated CI test summary job.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -408,6 +408,14 @@ jobs:
           dotnet workload restore
           dotnet build
 
+  tests-all:
+    name: All Tests Summary
+    runs-on: ubuntu-latest
+    needs: [test-console, test-wpf, test-library, test-avalonia]
+    steps:
+      - name: Summary
+        run: echo "All tests completed successfully"
+
   automerge:
     if: ${{ github.event_name == 'pull_request' }}
     runs-on: ubuntu-latest
