--- a/templates/Console/ConsoleApp/ConsoleApp.Tests/ConsoleApp.Tests.csproj
+++ b/templates/Console/ConsoleApp/ConsoleApp.Tests/ConsoleApp.Tests.csproj
@@ -16,7 +16,7 @@
     <PackageReference Include="Moq.AutoMock" />
     <PackageReference Include="System.CommandLine" />
 <!--#if (tests == "xunit")-->
-    <PackageReference Include="xunit" />
+    <PackageReference Include="xunit.v3" />
     <PackageReference Include="xunit.runner.visualstudio">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
