--- a/templates/WPF/WpfApp/Directory.Packages.props
+++ b/templates/WPF/WpfApp/Directory.Packages.props
@@ -38,7 +38,7 @@
     <PackageVersion Include="TUnit" Version="0.6.0" />
     <PackageVersion Include="TUnit.Assertions" Version="0.6.0" />
     <PackageVersion Include="TUnit.Engine" Version="0.6.0" />
-    <PackageVersion Include="xunit" Version="2.9.3" />
+    <PackageVersion Include="xunit.v3" Version="3.1.0" />
     <PackageVersion Include="xunit.runner.visualstudio" Version="3.1.5">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
